--- a/project-root/css/style.css
+++ b/project-root/css/style.css
@@ -1,3 +1,28 @@
+main{
+    margin: 30px;
+}
 h1{
     text-align: center;
+}
+.navbar ul{
+    list-style-type: none;
+    background-color: rgb(70, 9, 94);
+    padding: 0px;
+    margin: 0px;
+    overflow: hidden;
+}
+.navbar a{
+    color: white;
+    text-decoration: none;
+    padding: 15px;
+    display: block;
+    text-align: center;
+}
+.navbar a:hover{
+        background-color: rgb(117, 34, 152);
+
+}
+
+.navbar li{
+    float: left;
 }
